WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118907
REGRESSION: Hover doesn't work for block elements inside a href element
https://bugs.webkit.org/show_bug.cgi?id=118907
Summary
REGRESSION: Hover doesn't work for block elements inside a href element
Radu Stavila
Reported
2013-07-19 09:37:50 PDT
This problem was introduced by
https://bugs.webkit.org/show_bug.cgi?id=111749
Attachments
Patch
(4.23 KB, patch)
2013-07-19 09:51 PDT
,
Radu Stavila
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radu Stavila
Comment 1
2013-07-19 09:51:02 PDT
Created
attachment 207108
[details]
Patch
Dave Hyatt
Comment 2
2013-07-19 10:31:30 PDT
Comment on
attachment 207108
[details]
Patch r=me, we need a radar and to track this internally.
Radar WebKit Bug Importer
Comment 3
2013-07-19 10:33:04 PDT
<
rdar://problem/14494580
>
WebKit Commit Bot
Comment 4
2013-07-19 10:46:21 PDT
Comment on
attachment 207108
[details]
Patch Clearing flags on attachment: 207108 Committed
r152907
: <
http://trac.webkit.org/changeset/152907
>
WebKit Commit Bot
Comment 5
2013-07-19 10:46:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug