Hover doesn't work for block elements inside a href element https://bugs.webkit.org/show_bug.cgi?id=118907

Patch by Radu Stavila <stavila@adobe.com> on 2013-07-19
Reviewed by David Hyatt.

Source/WebCore:

Added test for hovering block elements inside a href element.

Test: fast/css/hover-display-block.html

* rendering/RenderObject.cpp:
(WebCore::RenderObject::hoverAncestor):

LayoutTests:

Don't skip all anonymous objects when searching for the hover ancestor, only the ones
directly flowed into a region.

* fast/css/hover-display-block-expected.txt: Added.
* fast/css/hover-display-block.html: Added.

Canonical link: https://commits.webkit.org/136759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152907 268f45cc-cd09-0410-ab3c-d52691b4dbfc